--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-6 text-center">
             <h1 class="display-3 mt-2 pt-3">
-                wev development Ebook
+                Web development Ebook
             </h1><p class="lead">learn web development front to back</p>
             <form action="/charge" method="POST">
             <script
