--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
            <div class="container-fluid">
               <div class="navbar-header">
-                  <h3 class="d-inline align-middle">E-Book Sales</h2>
+                  <h3 class="d-inline align-middle">E-Book Sales App</h2>
                </div>   
                </div>  
         </nav>        
